--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     ]
   },
   "devDependencies": {
-    "json-server": "^0.16.3"
+    "@types/styled-components": "^5.1.19",
+    "json-server": "^0.16.3",
+    "typescript": "^4.5.4"
   }
 }
