--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
   },
   "devDependencies": {
     "@types/react-dom": "^17.0.11",
+    "@types/react-icons": "^3.0.0",
+    "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.19",
     "json-server": "^0.16.3",
